tests/ui/args-flatten-subcommand.stderr
error[E0080]: evaluation panicked: cannot flatten an Args with subcommand
 --> tests/ui/args-flatten-subcommand.rs:6:12
  |
6 |     inner: Inner,
  |            ^^^^^ evaluation of `_` failed here
